--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Booki</title>
+        <title>Web app</title>
         <!-- file normalize -->
         <link rel="stylesheet" href="./css/normalize.css"/>
         <link rel="stylesheet" href="./css/style.css"/>
@@ -14,7 +14,7 @@
        <div id="container1">
             <header class="navBar">
                 <div class="headContainer"> 
-                    <div class="logo">Logo booki</div>
+                    <div class="logo">Logo</div>
                     <div class="hybrid"></div>
                     <div class="hebergement">
                         <nav>
@@ -64,9 +64,31 @@
                     </div>
                 </section>
                 <article id="container3">
-                    <section class="article1">Hébergement</section>
+                    <section class="article1">Hébergement à Marseille
+                        <p>afficher plus</p>
+                    </section>
                     <aside class="article2">Les plus populaires</aside>
-                    <section class="article3">Activités à Marseille</section>
+                    <section class="article3">
+                        <p>Activités à Marseille</p>
+                        <div class="article3cards">
+                            <div class="artcile3Part1">
+                                <div class="cards">
+                                    <p>PHOTO</p>
+                                    <p>vieux Port</p>
+                                </div>
+                                <div class="artcile3Relou">
+                                    <div class="cards">
+                                        <p>PHOTO</p>
+                                        <p>Port de Pomègues</p>
+                                    </div>
+                                    <div class="cards">
+                                        <p>PHOTO</p>
+                                        <p>Iles du Frioul</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </article>
             </main>
             <footer class="basDePage"> pied de page </footer>
