Add responsive structure for <Activites Marseille>

--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="artcile3Part2">
+                                <div class="cards">
+                                    <p>photo</p>
+                                    <p>Parc National des Calanques</p>
+                                </div>
+                                <div class="artcile3Relou">
+                                    <div class="cards">
+                                        <p>photo</p>
+                                        <p>Notre Dame de la garde</p>
+                                    </div>
+                                    <div class="cards">
+                                        <p>photo</p>
+                                        <p>Parc Longchap</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        
                         </div>
                     </section>
                 </article>
