Add <les plus populaires> structure

--- a/index.html
+++ b/index.html
@@ -67,7 +67,36 @@
                     <section class="article1">Hébergement à Marseille
                         <p>afficher plus</p>
                     </section>
-                    <aside class="article2">Les plus populaires</aside>
+                    <aside class="article2">
+                        <div class="artcile2Title">
+                            <p>Les plus populaires</p>
+                            <i>Icon</i>
+                        </div>
+                        <div class="cardsWithIcon">
+                            <p>PHOTO</p>
+                            <div class="cardDescripIcon">
+                                <h4>Hôtel Le soleil du matin</h1>
+                                <p>Nuit à partir de 128$</p>
+                                <i>Icon</i>
+                            </div>
+                        </div>
+                        <div class="cardsWithIcon">
+                            <p>PHOTO</p>
+                            <div class="cardDescripIcon">
+                                <h4>Au coeur de l'eau Chambres d'hôtes</h1>
+                                <p>Nuit à partir de 71$</p>
+                                <i>Icon</i>
+                            </div>
+                        </div>
+                        <div class="cardsWithIcon">
+                            <p>PHOTO</p>
+                            <div class="cardDescripIcon">
+                                <h4>Hôtel Tout bleu et Blanc</h1>
+                                <p>Nuit à partir de 68$</p>
+                                <i>Icon</i>
+                            </div>
+                        </div>
+                    </aside>
                     <section class="article3">
                         <p>Activités à Marseille</p>
                         <div class="article3cards">
@@ -103,8 +132,6 @@
                                     </div>
                                 </div>
                             </div>
-
-                        
                         </div>
                     </section>
                 </article>
