Add incorrect stucture for <hebergement marseille>

--- a/index.html
+++ b/index.html
@@ -64,7 +64,47 @@
                     </div>
                 </section>
                 <article id="container3">
-                    <section class="article1">Hébergement à Marseille
+                    <section class="article1">
+                        <p>Hébergement à Marseille</p>
+                        <div class="artcile1Part1">
+                            <div class="cards">
+                                <p>PHOTO</p>
+                                <h4>Auberge la Cannebière</h1>
+                                <p>Nuit à partir de 25$</p>
+                                <i>Icon</i>
+                            </div>
+                            <div class="cards">
+                                <p>PHOTO</p>
+                                <h4>Hôtel du port</h1>
+                                <p>Nuit à partir de 2$</p>
+                                <i>Icon</i>
+                            </div>
+                            <div class="cards">
+                                <p>PHOTO</p>
+                                <h4>Hôtel Les mouettes</h1>
+                                <p>Nuit à partir de 76$</p>
+                                <i>Icon</i>
+                            </div>
+                            <div class="artcile1Part2">
+                                <div class="cards">
+                                    <p>PHOTO</p>
+                                    <h4>Auberge la Cannebière</h1>
+                                    <p>Nuit à partir de 25$</p>
+                                    <i>Icon</i>
+                                </div>
+                                <div class="cards">
+                                    <p>PHOTO</p>
+                                    <h4>Hôtel du port</h1>
+                                    <p>Nuit à partir de 2$</p>
+                                    <i>Icon</i>
+                                </div>
+                                <div class="cards">
+                                    <p>PHOTO</p>
+                                    <h4>Hôtel Les mouettes</h1>
+                                    <p>Nuit à partir de 76$</p>
+                                    <i>Icon</i>
+                                </div>
+                        </div> 
                         <p>afficher plus</p>
                     </section>
                     <aside class="article2">
