Add <hebergement Marseille structure>

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                                 <p>Nuit à partir de 76$</p>
                                 <i>Icon</i>
                             </div>
+                        </div>
                             <div class="artcile1Part2">
                                 <div class="cards">
                                     <p>PHOTO</p>
