--- a/index.html
+++ b/index.html
@@ -177,7 +177,24 @@
                     </section>
                 </article>
             </main>
-            <footer class="basDePage"> pied de page </footer>
+            <footer class="basDePage">
+                <div class="footInfo">
+                    <h4>A propos</h4>
+                    <p>Fonctionnement du site</p>
+                    <p>Conditions générales de vente</p>
+                    <p>Données et confidentialité</p>
+                </div>
+                <div class="footInfo">
+                    <h4>Nos hébergements</h4>
+                    <p>Charte qualité</p>
+                    <p>Soumettre votre hôtel</p>
+                </div>
+                <div class="footInfo">
+                    <h4>Assistance</h4>
+                    <p>Centre d'aide</p>
+                    <p>Nous contacter</p>
+                </div>
+            </footer>
        </div>
     </body>
 </html>
