--- a/index.html
+++ b/index.html
@@ -63,47 +63,61 @@
                         <p>plus de 500...</p>
                     </div>
                 </section>
-                <article id="container3">
+               <!-- <article id="container3">
                     <section class="article1">
                         <p>Hébergement à Marseille</p>
                         <div class="artcile1Part1">
                             <div class="cards">
-                                <p>PHOTO</p>
-                                <h4>Auberge la Cannebière</h1>
-                                <p>Nuit à partir de 25$</p>
-                                <i>Icon</i>
-                            </div>
-                            <div class="cards">
-                                <p>PHOTO</p>
-                                <h4>Hôtel du port</h1>
-                                <p>Nuit à partir de 2$</p>
-                                <i>Icon</i>
-                            </div>
-                            <div class="cards">
-                                <p>PHOTO</p>
-                                <h4>Hôtel Les mouettes</h1>
-                                <p>Nuit à partir de 76$</p>
-                                <i>Icon</i>
-                            </div>
-                        </div>
-                            <div class="artcile1Part2">
-                                <div class="cards">
-                                    <p>PHOTO</p>
+                                <div class="cardImgB3">
+                                    <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Image of Auberge la Cannebière">
+                                </div>
+                                <div class="cardTextB3">
                                     <h4>Auberge la Cannebière</h1>
                                     <p>Nuit à partir de 25$</p>
                                     <i>Icon</i>
                                 </div>
-                                <div class="cards">
-                                    <p>PHOTO</p>
+                            </div>
+                            <div class="cards">
+                                <div class="cardImgB3"><p>PHOTO</p></div>
+                                <div class="cardTextB3">
                                     <h4>Hôtel du port</h1>
                                     <p>Nuit à partir de 2$</p>
                                     <i>Icon</i>
                                 </div>
-                                <div class="cards">
-                                    <p>PHOTO</p>
+                            </div>
+                            <div class="cards">
+                                <div class="cardImgB3"><p>PHOTO</p></div>
+                                <div class="cardTextB3">
                                     <h4>Hôtel Les mouettes</h1>
                                     <p>Nuit à partir de 76$</p>
                                     <i>Icon</i>
+                                </div>
+                            </div>
+                        </div>
+                            <div class="artcile1Part2">
+                                <div class="cards">
+                                    <div class="cardImgB3"><p>PHOTO</p></div>
+                                    <div class="cardTextB3">
+                                        <h4>Auberge la Cannebière</h1>
+                                        <p>Nuit à partir de 25$</p>
+                                        <i>Icon</i>
+                                    </div>
+                                </div>
+                                <div class="cards">
+                                    <div class="cardImgB3"><p>PHOTO</p></div>
+                                    <div class="cardTextB3">
+                                        <h4>Hôtel du port</h1>
+                                        <p>Nuit à partir de 2$</p>
+                                        <i>Icon</i>
+                                    </div>
+                                </div>
+                                <div class="cards">
+                                    <div class="cardImgB3"><p>PHOTO</p></div>
+                                    <div class="cardTextB3">
+                                        <h4>Hôtel Les mouettes</h1>
+                                        <p>Nuit à partir de 76$</p>
+                                        <i>Icon</i>
+                                    </div>
                                 </div>
                         </div> 
                         <p>afficher plus</p>
@@ -148,8 +162,8 @@
                                 </div>
                                 <div class="artcile3Relou">
                                     <div class="cards">
-                                        <p>PHOTO</p>
-                                        <p>Port de Pomègues</p>
+                                        <div class="cardImgB5"><p>PHOTO</p></div>
+                                        <div class="cardTextB5"><p>Port de Pomègues</p></div>
                                     </div>
                                     <div class="cards">
                                         <p>PHOTO</p>
@@ -175,7 +189,7 @@
                             </div>
                         </div>
                     </section>
-                </article>
+                </article>-->
             </main>
             <footer class="basDePage">
                 <div class="footInfo">
