Push style.css file, I don't know why i can'tfind it on github

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                         <p>plus de 500...</p>
                     </div>
                 </section>
-               <!-- <article id="container3">
+                <article id="container3">
                     <section class="article1">
                         <p>Hébergement à Marseille</p>
                         <div class="artcile1Part1">
                             <div class="cards">
                                 <div class="cardImgB3">
-                                    <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Image of Auberge la Cannebière">
+                                    <img src="./images/hebergements/4_small/AubergelaCannebière.jpg" alt="Image of Auberge la Cannebière">
                                 </div>
                                 <div class="cardTextB3">
                                     <h4>Auberge la Cannebière</h1>
@@ -189,7 +189,7 @@
                             </div>
                         </div>
                     </section>
-                </article>-->
+                </article>
             </main>
             <footer class="basDePage">
                 <div class="footInfo">
