--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
        <div id="container1">
             <header class="navBar">
                 <div class="headContainer"> 
-                    <div class="logo">Logo</div>
+                    <div class="logo"></div>
+                        <!--<img src="./images/logo/Booki.png" alt="Logo booki">-->
                     <div class="hybrid"></div>
                     <div class="hebergement">
                         <nav>
