Correction of hebergement and activités placement in mobile's size

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
                     <div class="logo"></div>
                         <!--<img src="./images/logo/Booki.png" alt="Logo booki">-->
                     <div class="hybrid"></div>
-                    <div class="hebergement">
-                        <nav>
-                            <a href="#">Hebergment</a>
-                            <a href="#">Activités</a>
-                        </nav>
+                    <div class="hebergementBar">
+                        
+                            <div class="hebergement">
+                               <nav><a href="#">Hebergment</a></nav>
+                            </div>
+                            <div class="activites">
+                                <nav><a href="#">Activités</a></nav>
+                            </div>
+                        
                     </div>
                 </div>
             </header>
