Add raleway police

--- a/index.html
+++ b/index.html
@@ -18,20 +18,18 @@
                         <!--<img src="./images/logo/Booki.png" alt="Logo booki">-->
                     <div class="hybrid"></div>
                     <div class="hebergementBar">
-                        
-                            <div class="hebergement">
-                               <nav><a href="#">Hebergment</a></nav>
-                            </div>
-                            <div class="activites">
-                                <nav><a href="#">Activités</a></nav>
-                            </div>
-                        
+                         <div class="hebergement">
+                            <nav><a href="#">Hebergment</a></nav>
+                        </div>
+                        <div class="activites">
+                            <nav><a href="#">Activités</a></nav>
+                        </div> 
                     </div>
                 </div>
             </header>
             <main id="container2">
                 <section id="filtersContainer">
-                    <h1>trouver votre hébergement</h1><p>En plain centre</p> 
+                    <h1>Trouver votre hébergement pour des vacances de rêve</h1><p>En plain centre ville ou en pleine nature</p> 
                     <div class="rechercheBar">
                         <i>icon</i>
                         <p>Marseille,France</p>
