Add: research button and localisation icon

--- a/index.html
+++ b/index.html
@@ -31,14 +31,22 @@
                 <section id="filtersContainer">
                     <h1>Trouver votre hébergement pour des vacances de rêve</h1><p>En plain centre ville ou en pleine nature</p> 
                     <div class="rechercheBar">
-                        <i>icon</i>
+                        <div class="buttonLocalisationIcon">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
                         <p>Marseille,France</p>
-                        <p>bouton recherche</p>
+                        <div class="buttonResearch">
+                            <p>bouton recherche</p>
+                        </div>
                     </div>
                     <div class="rechercheBarMobile">
-                        <i>icon</i>
+                        <div class="buttonLocalisationIcon">
+                           <i>icon</i>
+                        </div>
                         <p>Marseille,France</p>
-                        <i>icon loupe</i>
+                        <div class="buttonMagnifyingGlass">
+                            <i>loupe</i>
+                        </div>
                     </div>
                     <div class="filters">
                         <p>Filtres:</p>
