CORRECTION of the navigation bar

--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
        <div id="container1">
             <header class="navBar">
                 <div class="headContainer"> 
-                    <div class="logo"></div>
-                        <!--<img src="./images/logo/Booki.png" alt="Logo booki">-->
+                    <div class="logo">
+                        <a href="#"><img src="./images/logo/Booki.png" alt="Logo booki"></a>
+                    </div>
                     <div class="hybrid"></div>
                     <div class="hebergementBar">
-                         <div class="hebergement">
-                            <nav><a href="#">Hebergment</a></nav>
-                        </div>
-                        <div class="activites">
-                            <nav><a href="#">Activités</a></nav>
-                        </div> 
+                            <a href="#">Hebergment</a>
+                            <a href="#">Activités</a>
                     </div>
                 </div>
             </header>
@@ -34,10 +31,8 @@
                         <div class="buttonLocalisationIcon">
                             <i class="fa-solid fa-location-dot"></i>
                         </div>
-                        <p>Marseille,France</p>
-                        <div class="buttonResearch">
-                            <p>bouton recherche</p>
-                        </div>
+                        <div class="recherBarHolder"><p>Marseille,France</p></div>
+                        <div class="buttonResearch"><p>Rechercher</p></div>
                     </div>
                     <div class="rechercheBarMobile">
                         <div class="buttonLocalisationIcon">
@@ -45,11 +40,11 @@
                         </div>
                         <p>Marseille,France</p>
                         <div class="buttonMagnifyingGlass">
-                            <i>loupe</i>
+                            <i class="fa-solid fa-magnifying-glass"></i>
                         </div>
                     </div>
                     <div class="filters">
-                        <p>Filtres:</p>
+                        <h4>Filtres:</h4>
                         <div class="filterRelou"> 
                             <div class="filter">
                                 <i>icon</i>
@@ -70,7 +65,7 @@
                         </div>
                     </div>
                     <div class="headInformation">
-                        <i>icon</i>
+                        <i class="fa-solid fa-circle-info" style="color: #f2f2f2;;"></i>
                         <p>plus de 500...</p>
                     </div>
                 </section>
