--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                         <div class="buttonLocalisationIcon">
                             <i class="fa-solid fa-location-dot"></i>
                         </div>
-                        <div class="recherBarHolder"><p>Marseille,France</p></div>
-                        <div class="buttonResearch"><p>Rechercher</p></div>
+                        <input class ="searchBar" type="search" placeholder="Marseille, France">
+                        <div class="buttonResearch">Rechercher</div>
                     </div>
                     <div class="rechercheBarMobile">
                         <div class="buttonLocalisationIcon">
-                           <i>icon</i>
+                            <i class="fa-solid fa-location-dot"></i>
                         </div>
-                        <p>Marseille,France</p>
+                            <input class ="searchBarMobile" type="search" placeholder="Marseille, France">
                         <div class="buttonMagnifyingGlass">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </div>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="headInformation">
                         <i class="fa-solid fa-circle-info" style="color: #f2f2f2;;"></i>
-                        <p>plus de 500...</p>
+                        <p>Plus de 500 logements sont disponible dans cette ville</p>
                     </div>
                 </section>
                 <article id="container3">
@@ -130,7 +130,7 @@
                     </section>
                     <aside class="article2">
                         <div class="artcile2Title">
-                            <p>Les plus populaires</p>
+                            <h4>Les plus populaires</h4>
                             <i>Icon</i>
                         </div>
                         <div class="cardsWithIcon">
