Add: Icon to the filters and missing reponsive display for the mobile version

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
                         <h4>Filtres:</h4>
                         <div class="filterRelou"> 
                             <div class="filter">
-                                <i>icon</i>
+                                <i class="fa-solid fa-money-bill-wave"></i>
                                 <p>Economique</p>
                             </div>
                             <div class="filter">
-                                <i>icon</i>
-                                <p>Famille</p>
+                                <i class="fa-solid fa-child-reaching"></i>
+                                <p>Familial</p>
                             </div>
                         </div> 
                         <div class="filter">
-                            <i>icon</i>
+                            <i class="fa-solid fa-heart"></i>
                             <p>Romantique</p>
                         </div>
                         <div class="filter">
-                            <i>icon</i>
-                            <p>Animaux</p>
+                            <i class="fa-solid fa-dog"></i>
+                            <p>Animaux autorisés</p>
                         </div>
                     </div>
                     <div class="headInformation">
