Correction: display of the filter i

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                         <h4>Filtres:</h4>
                         <div class="filterRelou"> 
                             <div class="filter">
-                                <i class="fa-solid fa-money-bill-wave"></i>
+                                <div class="filterIcon">
+                                    <i class="fa-solid fa-money-bill-wave"></i>
+                                </div>
                                 <p>Economique</p>
                             </div>
                             <div class="filter">
