Almost complete filter, but the boder in mobile version is still to large

--- a/index.html
+++ b/index.html
@@ -53,16 +53,17 @@
                                 <p>Economique</p>
                             </div>
                             <div class="filter">
-                                <i class="fa-solid fa-child-reaching"></i>
+                                <div class="filterIcon"><i class="fa-solid fa-child-reaching"></i></div>
+                                
                                 <p>Familial</p>
                             </div>
                         </div> 
                         <div class="filter">
-                            <i class="fa-solid fa-heart"></i>
+                            <div class="filterIcon"><i class="fa-solid fa-heart"></i></div>
                             <p>Romantique</p>
                         </div>
                         <div class="filter">
-                            <i class="fa-solid fa-dog"></i>
+                            <div class="filterIcon"><i class="fa-solid fa-dog"></i></div>
                             <p>Animaux autorisés</p>
                         </div>
                     </div>
