--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="headInformation">
-                        <i class="fa-solid fa-circle-info" style="color: #f2f2f2;;"></i>
+                        <div class="infomationIcon"><i class="fa-solid fa-info"></i></i></div>
                         <p>Plus de 500 logements sont disponible dans cette ville</p>
                     </div>
                 </section>
@@ -83,7 +83,15 @@
                                 <div class="cardTextB3">
                                     <h4>Auberge la Cannebière</h1>
                                     <p>Nuit à partir de 25$</p>
-                                    <i>Icon</i>
+                                    <div class="starEvaluation">
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="startEmptyIcon">
+                                            <i class="fa-solid fa-star"></i>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="cards">
@@ -91,7 +99,13 @@
                                 <div class="cardTextB3">
                                     <h4>Hôtel du port</h1>
                                     <p>Nuit à partir de 2$</p>
-                                    <i>Icon</i>
+                                    <div class="starEvaluation">
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="cards">
@@ -99,7 +113,15 @@
                                 <div class="cardTextB3">
                                     <h4>Hôtel Les mouettes</h1>
                                     <p>Nuit à partir de 76$</p>
-                                    <i>Icon</i>
+                                    <div class="starEvaluation">
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <div class="startEmptyIcon">
+                                            <i class="fa-solid fa-star"></i>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -107,41 +129,69 @@
                                 <div class="cards">
                                     <div class="cardImgB3"><p>PHOTO</p></div>
                                     <div class="cardTextB3">
-                                        <h4>Auberge la Cannebière</h1>
+                                        <h4>Hôtel de la mer</h1>
                                         <p>Nuit à partir de 25$</p>
-                                        <i>Icon</i>
+                                        <div class="starEvaluation">
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="startEmptyIcon">
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="cards">
                                     <div class="cardImgB3"><p>PHOTO</p></div>
                                     <div class="cardTextB3">
-                                        <h4>Hôtel du port</h1>
+                                        <h4>Auberge Le Panier</h1>
                                         <p>Nuit à partir de 2$</p>
-                                        <i>Icon</i>
+                                        <div class="starEvaluation">
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="startEmptyIcon">
+                                                <i class="fa-solid fa-star"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="cards">
                                     <div class="cardImgB3"><p>PHOTO</p></div>
                                     <div class="cardTextB3">
-                                        <h4>Hôtel Les mouettes</h1>
+                                        <h4>Hôtel chez Amina</h1>
                                         <p>Nuit à partir de 76$</p>
-                                        <i>Icon</i>
+                                        <div class="starEvaluation">
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        </div>
                                     </div>
                                 </div>
                         </div> 
-                        <p>afficher plus</p>
+                        <p>Arfficher plus</p>
                     </section>
                     <aside class="article2">
                         <div class="artcile2Title">
                             <h4>Les plus populaires</h4>
-                            <i>Icon</i>
+                            <i class="fa-solid fa-star"></i>
                         </div>
                         <div class="cardsWithIcon">
                             <p>PHOTO</p>
                             <div class="cardDescripIcon">
                                 <h4>Hôtel Le soleil du matin</h1>
                                 <p>Nuit à partir de 128$</p>
-                                <i>Icon</i>
+                                <div class="starEvaluation">
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                </div>
                             </div>
                         </div>
                         <div class="cardsWithIcon">
@@ -149,7 +199,15 @@
                             <div class="cardDescripIcon">
                                 <h4>Au coeur de l'eau Chambres d'hôtes</h1>
                                 <p>Nuit à partir de 71$</p>
-                                <i>Icon</i>
+                                <div class="starEvaluation">
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="startEmptyIcon">
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="cardsWithIcon">
@@ -157,7 +215,15 @@
                             <div class="cardDescripIcon">
                                 <h4>Hôtel Tout bleu et Blanc</h1>
                                 <p>Nuit à partir de 68$</p>
-                                <i>Icon</i>
+                                <div class="starEvaluation">
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <div class="startEmptyIcon">
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </aside>
